Update : CpuLogger